--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -10,6 +10,11 @@
     margin: 10px 50px;
 }
 
+.cart-container{
+    background-color: rgba(255, 153, 0, 0.3);
+}
+
+
 @media screen and (max-width: 1100){
     .products-container{
         grid-template-columns: repeat(2, 1fr);
